--- a/src/health/health.d/vernemq.conf
+++ b/src/health/health.d/vernemq.conf
@@ -268,7 +268,7 @@ component: VerneMQ
     every: 1m
      warn: $this > (($status >= $WARNING) ? (0) : (5))
     delay: up 2m down 5m multiplier 1.5 max 2h
-  summary: VerneMQ unnexpected recieved PUBACK
+  summary: VerneMQ unexpected received PUBACK
      info: Number of received unexpected v3/v5 PUBACK packets in the last minute
        to: sysadmin
 
