--- a/src/logsmanagement/stock_conf/logsmanagement.d/default.conf
+++ b/src/logsmanagement/stock_conf/logsmanagement.d/default.conf
@@ -404,7 +404,7 @@
 
 [auth.log tail]
 	## Example: Log collector that will tail auth.log file and count 
-	## occurences of certain `sudo` commands, using POSIX regular expressions.
+	## occurrences of certain `sudo` commands, using POSIX regular expressions.
 
 	## Required settings
 	enabled = no
