--- a/src/logsmanagement/stock_conf/logsmanagement.d/example_syslog.conf
+++ b/src/logsmanagement/stock_conf/logsmanagement.d/example_syslog.conf
@@ -1,6 +1,6 @@
 [syslog tail]
     ## Example: Log collector that will tail the syslog file and count 
-    ## occurences of certain keywords, using POSIX regular expressions.
+    ## occurrences of certain keywords, using POSIX regular expressions.
 
     ## Required settings
     enabled = no
