Drop include guards.
And shift systemd detection code to a macro so it’s less dangerous to
import the module multiple times.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1458,6 +1458,7 @@ set_source_files_properties(JudyLTables.c PROPERTIES COMPILE_OPTIONS "-I${CMAKE_
 #
 
 include(NetdataDetectSystemd)
+detect_systemd()
 
 add_library(libnetdata STATIC ${LIBNETDATA_FILES})
 
