--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -71,8 +71,8 @@ jobs:
         id: get-version
         run: .github/scripts/get-go-version.py
 
-  go-vet:
-    name: go vet
+  tests:
+    name: Go toolchain tests
     runs-on: ubuntu-latest
     needs:
       - file-check
@@ -94,70 +94,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Go Vet
+      - name: Go mod download
         if: needs.file-check.outputs.run == 'true'
-        run: go vet ./...
+        run: go mod download
         working-directory: ${{ matrix.module }}
-
-  go-fmt:
-    name: go fmt
-    runs-on: ubuntu-latest
-    needs:
-      - file-check
-      - check-go-version
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJson(needs.check-go-version.outputs.matrix) }}
-    steps:
-      - name: Skip Check
-        id: skip
-        if: needs.file-check.outputs.run != 'true'
-        run: echo "SKIPPED"
-      - name: Install Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ needs.check-go-version.outputs.go-version }}
-      - name: Checkout
+      - name: Compile
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+        run: |
+          CGO_ENABLED=0 go build -o /tmp/go-test-build ./...
+          /tmp/go-test-build --help || true
+        working-directory: ${{ matrix.module }}
       - name: Go fmt
         if: needs.file-check.outputs.run == 'true'
         run: |
           go fmt ./... | tee modified-files
           [ $(wc -l modified-files) -ne 0 ] && exit 1
         working-directory: ${{ matrix.module }}
-
-  go-test:
-    name: go test
-    runs-on: ubuntu-latest
-    needs:
-      - file-check
-      - check-go-version
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJson(needs.check-go-version.outputs.matrix) }}
-    steps:
-      - name: Skip Check
-        id: skip
-        if: needs.file-check.outputs.run != 'true'
-        run: echo "SKIPPED"
-      - name: Install Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ needs.check-go-version.outputs.go-version }}
-      - name: Checkout
+      - name: Go vet
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+        run: go vet ./...
+        working-directory: ${{ matrix.module }}
       - name: Set up gotestfmt
+        if: needs.file-check.outputs.run == 'true'
         uses: GoTestTools/gotestfmt-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: v2.0.0
-      - name: Go Vet
+      - name: Go test
         if: needs.file-check.outputs.run == 'true'
         run: |
           set -euo pipefail
