--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -53,16 +53,12 @@ jobs:
             echo 'run=false' >> "${GITHUB_OUTPUT}"
           fi
 
-  check-go-version:
-    name: Determine Required Go Version
+  matrix:
+    name: Generate Build Matrix
     runs-on: ubuntu-latest
     outputs:
-      go-version: ${{ steps.get-version.outputs.version }}
       matrix: ${{ steps.get-version.outputs.matrix }}
     steps:
-      - name: Skip Check
-        id: skip
-        run: echo "SKIPPED"
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install dependencies
@@ -76,10 +72,10 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - file-check
-      - check-go-version
+      - matrix
     strategy:
       fail-fast: false
-      matrix: ${{ fromJson(needs.check-go-version.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.matrix.outputs.matrix) }}
     steps:
       - name: Skip Check
         id: skip
@@ -88,7 +84,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ needs.check-go-version.outputs.go-version }}
+          go-version: ${{ matrix.version }}
       - name: Checkout
         if: needs.file-check.outputs.run == 'true'
         uses: actions/checkout@v4
@@ -101,14 +97,14 @@ jobs:
       - name: Compile
         if: needs.file-check.outputs.run == 'true'
         run: |
-          CGO_ENABLED=0 go build -o /tmp/go-test-build ./...
+          CGO_ENABLED=0 go build -o /tmp/go-test-build ${{ matrix.build_target }}
           /tmp/go-test-build --help || true
         working-directory: ${{ matrix.module }}
       - name: Go fmt
         if: needs.file-check.outputs.run == 'true'
         run: |
           go fmt ./... | tee modified-files
-          [ $(wc -l modified-files) -ne 0 ] && exit 1
+          [ "$(wc -l modified-files | cut -f 1 -d ' ')" -ne 0 ] && exit 1
         working-directory: ${{ matrix.module }}
       - name: Go vet
         if: needs.file-check.outputs.run == 'true'
