--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -46,7 +46,8 @@ ifeq ($(ENABLE_SENTRY),true)
         -DNETDATA_SENTRY_ENVIRONMENT=$(RELEASE_PIPELINE) \
         -DNETDATA_SENTRY_RELEASE=$(VERSION) \
         -DNETDATA_SENTRY_DIST=$(BUILD_DESTINATION) \
-        -DNETDATA_SENTRY_DSN=$(SENTRY_DSN)
+        -DNETDATA_SENTRY_DSN=$(SENTRY_DSN) \
+        -DENABLE_LIBBACKTRACE=On
 else
     SENTRY_CONFIG := -DENABLE_SENTRY=Off
 endif
@@ -69,7 +70,7 @@ override_dh_auto_configure:
 		packaging/bundle-ebpf-co-re.sh . ${TOP}/usr/libexec/netdata/plugins.d; \
 	fi
 	dh_auto_configure -- -G Ninja \
-		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+		-DCMAKE_BUILD_TYPE=Debug \
 		-DCMAKE_INSTALL_PREFIX=/ \
 		-DWEB_DIR=/var/lib/netdata/www \
 		-DCMAKE_C_FLAGS='-ffile-prefix-map=${SRC_DIR}=${SRC_DIR}' \
@@ -105,7 +106,6 @@ override_dh_strip:
 	if [ "${ENABLE_SENTRY}" = "true" ] && [ "${UPLOAD_SENTRY}" = "true" ]; then \
 		sentry-cli debug-files upload -o netdata-inc -p netdata-agent --force-foreground --log-level=debug --wait --include-sources /usr/src/netdata/debian/netdata/usr/sbin/netdata; \
 	fi
-	dh_strip
 
 override_dh_install:
 	cp -v $(BASE_CONFIG) debian/netdata.conf
