packaging: remove Suggests nut

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -102,7 +102,7 @@ Depends: bash,
          netdata (= ${source:Version})
 Pre-Depends: adduser
 Conflicts: netdata (<< ${source:Version})
-Suggests: apcupsd, nut, iw, sudo
+Suggests: apcupsd, iw, sudo
 Description: The charts.d metrics collection plugin for the Netdata Agent
  This plugin adds a selection of additional collectors written in shell
  script to the Netdata Agent. It includes collectors for NUT, APCUPSD,
