no, it does not

--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -105,7 +105,7 @@ Conflicts: netdata (<< ${source:Version})
 Suggests: apcupsd, iw, sudo
 Description: The charts.d metrics collection plugin for the Netdata Agent
  This plugin adds a selection of additional collectors written in shell
- script to the Netdata Agent. It includes collectors for NUT, APCUPSD,
+ script to the Netdata Agent. It includes collectors for APCUPSD,
  LibreSWAN, OpenSIPS, and Wireless access point statistics.
 
 Package: netdata-plugin-ebpf
