--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -710,7 +710,7 @@ Suggests: sudo
 
 %description plugin-chartsd
  This plugin adds a selection of additional collectors written in shell script to the Netdata Agent.
-It includes collectors for NUT, APCUPSD, LibreSWAN, OpenSIPS, and Wireless access point statistics.
+It includes collectors for APCUPSD, LibreSWAN, OpenSIPS, and Wireless access point statistics.
 
 %pre plugin-chartsd
 
