--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2178,7 +2178,7 @@ if(ENABLE_PLUGIN_GO)
     add_go_target(go-plugin go.d.plugin src/go/collectors/go.d.plugin cmd/godplugin)
 
     install(PROGRAMS ${CMAKE_BINARY_DIR}/go.d.plugin
-            COMPONENT go.d.plugin
+            COMPONENT go_d_plugin
             DESTINATION usr/libexec/netdata/plugins.d)
 endif()
 
@@ -2729,23 +2729,23 @@ install(PROGRAMS ${CMAKE_BINARY_DIR}/src/collectors/ioping.plugin/ioping.plugin
 #
 if(ENABLE_PLUGIN_GO)
     install(FILES src/go/collectors/go.d.plugin/config/go.d.conf
-            COMPONENT god_plugin
+            COMPONENT go_d_plugin
             DESTINATION usr/lib/netdata/conf.d)
 
     install(DIRECTORY
-            COMPONENT god_plugin
+            COMPONENT go_d_plugin
             DESTINATION usr/lib/netdata/conf.d/go.d)
     file(GLOB GO_CONF_FILES src/go/collectors/go.d.plugin/config/go.d/*.conf)
     install(FILES ${GO_CONF_FILES}
-            COMPONENT god_plugin
+            COMPONENT go_d_plugin
             DESTINATION usr/lib/netdata/conf.d/go.d)
 
     install(DIRECTORY
-            COMPONENT go.d.plugin
+            COMPONENT go_d_plugin
             DESTINATION usr/lib/netdata/conf.d/go.d/sd)
     file(GLOB GO_SD_CONF_FILES src/go/collectors/go.d.plugin/config/go.d/sd/*.conf)
     install(FILES ${GO_SD_CONF_FILES}
-            COMPONENT go.d.plugin
+            COMPONENT go_d_plugin
             DESTINATION usr/lib/netdata/conf.d/go.d/sd)
 endif()
 
